# api/gen/go/permission/service/v1/rbac.pb.validate.go
@@ -34,121 +34,3 @@ var (
 	_ = anypb.Any{}
 	_ = sort.Sort
 )
-
-// Validate checks the field values on Role with the rules defined in the proto
-// definition for this message. If any rules are violated, the first error
-// encountered is returned, or nil if there are no violations.
-func (m *Role) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on Role with the rules defined in the
-// proto definition for this message. If any rules are violated, the result is
-// a list of violation errors wrapped in RoleMultiError, or nil if none found.
-func (m *Role) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *Role) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for Id
-
-	// no validation rules for Name
-
-	// no validation rules for Code
-
-	// no validation rules for Remark
-
-	// no validation rules for Weight
-
-	// no validation rules for Status
-
-	// no validation rules for DataScope
-
-	// no validation rules for IsSystem
-
-	// no validation rules for CreatedAt
-
-	// no validation rules for UpdatedAt
-
-	if len(errors) > 0 {
-		return RoleMultiError(errors)
-	}
-
-	return nil
-}
-
-// RoleMultiError is an error wrapping multiple validation errors returned by
-// Role.ValidateAll() if the designated constraints aren't met.
-type RoleMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m RoleMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m RoleMultiError) AllErrors() []error { return m }
-
-// RoleValidationError is the validation error returned by Role.Validate if the
-// designated constraints aren't met.
-type RoleValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e RoleValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e RoleValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e RoleValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e RoleValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e RoleValidationError) ErrorName() string { return "RoleValidationError" }
-
-// Error satisfies the builtin error interface
-func (e RoleValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sRole.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = RoleValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = RoleValidationError{}
